edited some links

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>India</p>
             </section>
             <section class="resume">
-                <a href = "C:\Users\kanch\OneDrive\Kanchan_resume.pdf" target = "_blank" id="resume_link">
+                <a href = "resume/Kanchan_resume.pdf" target = "_blank" id="resume_link">
                     <svg width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" xmlns="http://www.w3.org/2000/svg" class=" text-neutral-500 dark:text-neutral-400" fill="none"><path d="M20 12V5.749a.6.6 0 00-.176-.425l-3.148-3.148A.6.6 0 0016.252 2H4.6a.6.6 0 00-.6.6v18.8a.6.6 0 00.6.6H11M8 10h8M8 6h4m-4 8h3" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path><path d="M16.306 17.113l.909-1.927a.312.312 0 01.57 0l.91 1.927 2.032.311c.261.04.365.376.177.568l-1.471 1.5.347 2.118c.044.272-.229.48-.462.351l-1.818-1-1.818 1c-.234.129-.506-.079-.462-.351l.347-2.118-1.47-1.5c-.19-.192-.085-.528.176-.568l2.033-.31zM16 2v3.4a.6.6 0 00.6.6H20" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
                     <p>Resume</p>
                 </a>
@@ -130,7 +130,7 @@ Let’s connect and create something meaningful.</pre>
                 </div>
 
                 <div class = "connect">
-                    <a href = "https://www.linkedin.com/in/kanchan-kumari-19/" target = "_blank">
+                    <a href = "https://www.linkedin.com/in/kanchan-kumari19/" target = "_blank">
                         <svg class="size-4" style="width:1rem;height:1rem" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg"><path d="M116 3H12a8.91 8.91 0 0 0-9 8.8v104.42a8.91 8.91 0 0 0 9 8.78h104a8.93 8.93 0 0 0 9-8.81V11.77A8.93 8.93 0 0 0 116 3" fill="#0076b2"></path><path d="M21.06 48.73h18.11V107H21.06zm9.06-29a10.5 10.5 0 1 1-10.5 10.49 10.5 10.5 0 0 1 10.5-10.49m20.41 29h17.36v8h.24c2.42-4.58 8.32-9.41 17.13-9.41C103.6 47.28 107 59.35 107 75v32H88.89V78.65c0-6.75-.12-15.44-9.41-15.44s-10.87 7.36-10.87 15V107H50.53z" fill="#fff"></path></svg>
                         <p>@kanchan-kumari-19</p>
                         <p class = "platform">LinkedIn</p>
