--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <section class = "intro_details">
                 <h2>Kanchan Kumari</h2>
-                <p>Software Developer</p>
+                <p>Full Stack Developer</p>
                 <p>India</p>
             </section>
             <section class="resume">
