corrected typo error

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Let’s connect and create something meaningful.</pre>
 
         <div class = "experience_container" id = "experience">
             <h3>Experience</h3>
-            <p>My carrer journey and accomplishments</p>
+            <p>My career journey and accomplishments</p>
             <div class="experience">
                 <div class="experience_description">
                     <h3>Self Learning Programmer</h3>
