--- a/index.html
+++ b/index.html
@@ -297,9 +297,7 @@ Let’s connect and create something meaningful.</pre>
     </body>
 
     <footer>
-        <p class="copyright_text">© Copyright 2025 by </p>
-        <b>Kanchan Kumari</b>
-        <p>. All rights reserved.</p>
+        <p>© Copyright 2025 by <b>Kanchan Kumari</b>. All rights reserved.</p>
     </footer>
 
 </html>
