Updated some content

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <section class = "intro_details">
                 <h2>Kanchan Kumari</h2>
-                <p>Full Stack Developer</p>
+                <p>Software Developer</p>
                 <p>India</p>
             </section>
             <section class="resume">
@@ -229,7 +229,7 @@ Let’s connect and create something meaningful.</pre>
                         <li>Amazon Clone (HTML, CSS) – Functional frontend replica.</li>
                         <li>Mini Projects – Keyboard Check, Color Changer, Digital Clock, BMI Calculator, Unlimited Colors (HTML, CSS, JS).</li>
                         <li>Actively learning Java & MySQL to develop backend-driven applications.</li>
-                        <li>Continuously upskilling in DSA, frontend development, and System Design.</li>
+                        <li>Continuously upskilling in DSA and frontend development.</li>
                     </ul>
                 </div>
 
